--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>My Portfolio</title>
-  <link rel="stylesheet" href="C:\Users\Dell\Desktop\portfolio\portfolio.html\style.css">
+  <link rel="stylesheet" href="portflio\style.css">
 </head>
 <body>
   <header>
